-- homepage off screen with map -- fix news

--- a/src/assets/styles/assets/base.scss
+++ b/src/assets/styles/assets/base.scss
@@ -311,7 +311,7 @@ html.has-scroll-dragging {
 }
 
 
-body:not(.home-page) .scroller-container {
+body:not(.index-page) .scroller-container {
     width: 100%;
     min-height: 100vh;
     position: static;
